# t_finess_explo

./: .gitignore  main.py  pyproject.toml
finess/: __init__.py  cleaning.py  stats_by_dept.py
tests/: test_cleaning.py
