[project]
name = "finesspy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.0",
    "ipykernel>=6.29.5",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "pytest>=8.4.1",
]

[tool.setuptools.packages.find]
include = ["finess*"]
